[gd_scene load_steps=9 format=3 uid="uid://klis63ohmr7m"]

[ext_resource type="Script" path="res://objects/game_object.gd" id="1_bou1i"]
[ext_resource type="Texture2D" uid="uid://btvi81tdx4hpt" path="res://assets/player.png" id="2_p58hc"]
[ext_resource type="Script" path="res://objects/components/hitbox_component.gd" id="3_ln2w7"]
[ext_resource type="Script" path="res://objects/components/attack_component.gd" id="4_6wbnq"]
[ext_resource type="Script" path="res://objects/components/weapon_point_component.gd" id="5_dr6pd"]
[ext_resource type="Script" path="res://objects/components/player_controller.gd" id="5_xv61v"]
[ext_resource type="Script" path="res://objects/components/health_component.gd" id="7_mffs5"]
[ext_resource type="Script" path="res://objects/components/death_particle_component.gd" id="8_xo4vj"]

[node name="Player" type="Node2D"]
texture_filter = 1
script = ExtResource("1_bou1i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p58hc")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("3_ln2w7")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-9, 13, -16, 8, -5, -3, -1, -16, 1, -16, 5, -3, 16, 8, 9, 13)

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("4_6wbnq")
firing_mode = 1

[node name="WeaponLeftA" type="Node2D" parent="AttackComponent"]
position = Vector2(-13, 0)
script = ExtResource("5_dr6pd")
projectile = &"PlayerProjectile"
cooldown_frames = 20

[node name="WeaponLeftB" type="Node2D" parent="AttackComponent"]
position = Vector2(-8, -5)
script = ExtResource("5_dr6pd")
projectile = &"PlayerProjectile"
cooldown_frames = 20
firing_index = 1

[node name="WeaponRightA" type="Node2D" parent="AttackComponent"]
position = Vector2(7, -5)
script = ExtResource("5_dr6pd")
projectile = &"PlayerProjectile"
cooldown_frames = 20
firing_index = 2

[node name="WeaponRightB" type="Node2D" parent="AttackComponent"]
position = Vector2(12, 0)
script = ExtResource("5_dr6pd")
projectile = &"PlayerProjectile"
cooldown_frames = 20
firing_index = 3

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("5_xv61v")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_mffs5")
max_health = 50

[node name="DeathParticleComponent" type="Node2D" parent="."]
script = ExtResource("8_xo4vj")
code = &"ExplosionBig"
